--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -29,6 +29,8 @@
   display: flex;
   flex-direction: column;
   text-decoration: none;
+  position: relative;
+  z-index: 10;
 }
 
 .logo-text {
